@@ -49,6 +49,7 @@ import twitter4j.Twitter;
 import twitter4j.TwitterException;
 import twitter4j.User;
 import uk.co.senab.actionbarpulltorefresh.library.ActionBarPullToRefresh;
+import uk.co.senab.actionbarpulltorefresh.library.Options;
 import uk.co.senab.actionbarpulltorefresh.library.PullToRefreshAttacher;
 import uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout;
 import uk.co.senab.actionbarpulltorefresh.library.listeners.OnRefreshListener;
@@ -130,6 +131,8 @@ public class MentionsFragment extends Fragment implements OnRefreshListener {
 
         // Now setup the PullToRefreshLayout
         ActionBarPullToRefresh.from(context)
+                // set up the scroll distance
+                .options(Options.create().scrollDistance(.4f).build())
                 // Mark All Children as pullable
                 .allChildrenArePullable()
                         // Set the OnRefreshListener
